plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'io.github.k7t3'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

javafx {
    version = '21'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'com.github.k7t3.tcv.view.TCVApp'
}

dependencies {

    implementation 'org.slf4j:slf4j-jdk14:2.0.11'

    implementation 'com.github.twitch4j:twitch4j:1.19.0'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    //noinspection VulnerableLibrariesLocal
    //implementation 'com.dlsc.gemsfx:gemsfx:1.92.0'

    // AtlantaFX同梱のアイコンパックを使用する
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-feather-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-material2-pack:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1'
    implementation 'de.saxsys:mvvmfx:1.8.0'
    implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
//    implementation 'org.fxmisc.flowless:flowless:0.7.2'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}